play with some swag
