# src/routes/index.ts
@@ -1,16 +1,28 @@
 import Router from 'express';
-// import {Homie} from "../models/homie.js";
 import {createHomie, getHomieById} from "../controllers/hangout.js";
-
+import swaggerUi from 'swagger-ui-express';
+import swaggerDoc from "../swagger.json" assert { type: "json" };
 
 export const routes = Router();
+// routes.get('/', (req, res) => {
+//   res.send("hello");
+// });
 
-routes.get('/hello', (req, res) => {
-  res.send("Hello World!");
-});
+// Swaggggg
+routes.use('/api-docs', swaggerUi.serve);
+routes.get('/api-docs', swaggerUi.setup(swaggerDoc));
+
+// routes.get('/hello', (req, res) => {
+//   res.send("Hello World!");
+// });
 
 
 routes.post('/homie', async (req, res) => {
+  /*  #swagger.parameters['homie'] = {
+        in: 'body',
+        description: 'Creating a new homie. This (for now) will not add them to a hangout',
+        schema: { $ref: '#/definitions/homie' }
+  } */
   try {
     const newHomie = req.body;
     const result = await createHomie(newHomie.name, newHomie.email);
@@ -22,6 +34,10 @@ routes.post('/homie', async (req, res) => {
 
 
 routes.get('/homie/:homieId', async (req, res) => {
+  /* #swagger.responses[200] = {
+     description: 'Get a homie by ID',
+     schema: { $ref: '#/definitions/homie' }
+ } */
   try {
     const homieId = req.params.homieId;
     const result = await getHomieById(homieId);
